--- a/watch.html
+++ b/watch.html
@@ -82,140 +82,23 @@
     <!-- Watch Section -->
     <section class="watch__body">
       <!--contains next match card-->
-      <div class="shape">
-        <div class="shop-header">
-          <h1>Watch</h1>
-          <h2>GURFC</h2>
-        </div>
-      </div>
       <div class="watch__container">
-        <div class="watch__container1">
-          <div class="watch__Slideshow">
-            <div class="about__content2">
-              <div class="Slides fade">
-                <div class="SlideTitle"></div>
-                <iframe
-                  width="384"
-                  height="683"
-                  src="https://www.youtube.com/embed/4HPlG8b21f8?si=oXaO9devNSvb6r9E"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                ></iframe>
-              </div>
-              <div class="Slides fade">
-                <div class="SlideTitle"></div>
-                <iframe
-                  width="384"
-                  height="683"
-                  src="https://www.youtube.com/embed/s9mZfpYUdOE?si=7hsH_nPVwXbicRi-"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                ></iframe>
-              </div>
-              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-              <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            </div>
-            <br />
-            <div style="text-align: center">
-              <span class="dot" onclick="currentSlide(1)"></span>
-              <span class="dot" onclick="currentSlide(2)"></span>
-            </div>
-          </div>
-          <img class="schedule-image" src="images/schedule.png" />
+        <div class="schedule__container">
+          <h2>Georgetown vs. RPI</h2>
         </div>
         <div class="watch__container2">
           <div class="videos">
             <div class="youtube">
               <iframe
-                src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844"
-                title="YouTube video player"
+                width="1000"
+                height="600"
+                src="https://www.youtube.com/embed/P87U4T2dln0"
+                title="Georgetown vs. RPI - Men&#39;s Division II Round of 16"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
-            </div>
-          </div>
-          <div class="watch__main">
-            <div class="watch__video">
-              <table class="score-box">
-                <caption>
-                  2023 Results
-                </caption>
-                <thead>
-                  <tr>
-                    <th>Opponent</th>
-                    <th>Result</th>
-                    <th>Location</th>
-                    <th>Date</th>
-                    <th>Watch</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Villanova</td>
-                    <td>W 48-37</td>
-                    <td>Alapocas Run State Park</td>
-                    <td>11/4/2023</td>
-                    <td>Georgetown vs. Villanova</td>
-                  </tr>
-                  <tr class="active-row">
-                    <td>Scranton</td>
-                    <td>W 50-22</td>
-                    <td>North Bay Rugby Club</td>
-                    <td>10/28/2023</td>
-                    <td>Georgetown vs. Scranton</td>
-                  </tr>
-                  <tr>
-                    <td>Shippensburg</td>
-                    <td>W 28-0</td>
-                    <td>@ Shippensburg</td>
-                    <td>10/21/2023</td>
-                    <td>Shippensburg vs. Georgetown</td>
-                  </tr>
-                  <tr>
-                    <td>Drexel</td>
-                    <td>W 28-0</td>
-                    <td>Cooper Field</td>
-                    <td>10/14/2023</td>
-                    <td>Unavailable</td>
-                  </tr>
-                  <tr>
-                    <td>Towson</td>
-                    <td>W 47-0</td>
-                    <td>@ Towson</td>
-                    <td>10/7/2023</td>
-                    <td>Unavailable</td>
-                  </tr>
-                  <tr>
-                    <td>Mount C</td>
-                    <td>W 78-10</td>
-                    <td>@ Mount</td>
-                    <td>9/23/2023</td>
-                    <td>Unavailable</td>
-                  </tr>
-                  <tr>
-                    <td>UMBC</td>
-                    <td>W 78-10</td>
-                    <td>Cooper Field</td>
-                    <td>9/16/2023</td>
-                    <td>Unavailable</td>
-                  </tr>
-                  <tr>
-                    <td>York</td>
-                    <td>W 28-0</td>
-                    <td>@ York</td>
-                    <td>9/9/2023</td>
-                    <td>Unavailable</td>
-                  </tr>
-                </tbody>
-              </table>
             </div>
           </div>
         </div>
