--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - NCR Round of 16
+            NCR Round of 16 - Nov 22
           </h4>
-          <p>1:00pm - Nov 22 - Fairfield University</p>
+          <p>1:00pm @ Fairfield University</p>
         </div>
         <div></div>
         <div class="opponent-card">
